gcc/testsuite/g++.dg/parse/crash1.C
struct s { s(std::b o) { } }; // { dg-error "" }
